applications/k8s-objects/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.local`) || Host(`192.168.0.240`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
    - match: Host(`argocd.local`) || Host(`192.168.0.240`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
      middlewares:
        - name: argocd-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-stripprefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /
