applications/k8s-objects/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow
  annotations:
    # indica al operador ngrok qué puerto del Service corresponde a HTTPS/HTTP
    k8s.ngrok.com/app-protocols: '{"https-port":"https","http-port":"http"}'
    # opcionales para ngrok / nginx según tu caso
    kubernetes.io/ingress.class: "ngrok"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: ngrok
  rules:
    - host: refined-antelope-typically.ngrok-free.app
      http:
        paths:
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow-server-service
                port:
                  number: 5000
